--- a/auraly.html
+++ b/auraly.html
@@ -43,21 +43,16 @@
       <div class="hero-content">
         <h1 data-aos="fade-up">Experience Music with Elegance</h1>
         <p class="hero-main" data-aos="fade-up" data-aos-delay="100">
-          Discover a beautifully crafted interface where music meets design.
-          Search and explore your favorite tracks with unprecedented ease and
-          style.
+          Discover a beautifully crafted interface where music meets design. 
+          Search and explore your favorite tracks with unprecedented ease and style.
         </p>
-        <div class="availability-info" data-aos="fade-up" data-aos-delay="150">
-          <p class="coming-soon">
-            <span class="badge">Coming Soon</span>
-            Official mobile app in development
-          </p>
-          <p class="web-app-note">
-            Meanwhile, enjoy Auraly as a web app on your desktop or add to your
-            Android home screen for a native-like experience
-          </p>
-        </div>
         <div class="cta-buttons" data-aos="fade-up" data-aos-delay="200">
+          <a href="#" class="cta-button app-cta app-coming-soon">
+            App Coming Soon
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+              <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </a>
           <a
             href="https://123nt.github.io/auraly-app/search.html"
             class="cta-button web-btn"
@@ -109,14 +104,7 @@
             No interruptions, no ads - just pure, uninterrupted music enjoyment
           </p>
         </div>
-        <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-          <div class="feature-icon">🔄</div>
-          <h3>Weekly Updates</h3>
-          <p>
-            Fresh features and improvements every week to enhance your music
-            journey
-          </p>
-        </div>
+
         <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
           <div class="feature-icon">💫</div>
           <h3>Easy to Use</h3>
@@ -130,14 +118,6 @@
           <p>
             Your privacy matters - we don't collect any personal data or
             tracking information
-          </p>
-        </div>
-        <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
-          <div class="feature-icon">🌐</div>
-          <h3>Enjoy Anywhere</h3>
-          <p>
-            Access your music from any device, anywhere - perfect for home,
-            work, or on the go
           </p>
         </div>
       </div>
@@ -174,84 +154,81 @@
       </div>
     </section>
 
+    <section id="app-showcase" class="app-showcase">
+      <div class="container">
+        <div class="app-showcase-content">
+          <div class="app-showcase-text" data-aos="fade-right">
+            <h2>Elevate Your Music Experience</h2>
+            <p>
+              Auraly transforms music discovery into an art form. Our
+              meticulously designed interface combines cutting-edge technology
+              with elegant design, creating an intuitive journey through sound.
+            </p>
+            <div class="app-features">
+              <div class="app-feature">
+                <div class="feature-icon">🔍</div>
+                <div class="feature-description">
+                  <h4>Intelligent Search</h4>
+                  <p>Find your perfect track with unprecedented precision</p>
+                </div>
+              </div>
+              <div class="app-feature">
+                <div class="feature-icon">🎵</div>
+                <div class="feature-description">
+                  <h4>Personalized Playlists</h4>
+                  <p>Curated collections that understand your musical soul</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="new-features" class="new-features">
+      <div class="container">
+        <div class="features-container">
+          <div
+            class="feature-card coming-soon"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="feature-icon">✨</div>
+            <h3>More Features Coming</h3>
+            <p>Stay tuned for exciting updates and new capabilities</p>
+            <span class="badge">Coming Soon</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="privacy-terms" class="privacy-terms">
-      <div class="section-header">
-        <h2 data-aos="fade-up">Privacy and Terms</h2>
-        <p data-aos="fade-up" data-aos-delay="100">
-          We prioritize your trust and transparency
-        </p>
-      </div>
-      <div class="privacy-terms-content">
-        <div class="privacy-card" data-aos="fade-up">
-          <div class="privacy-icon">🔒</div>
-          <h3>Data Privacy</h3>
-          <p>
-            We do not collect, store, or share any personal user data. Your
-            music preferences and search history remain completely private.
+      <div class="container">
+        <div class="section-header">
+          <h2 data-aos="fade-up">Privacy and Terms</h2>
+          <p data-aos="fade-up" data-aos-delay="100">
+            We prioritize your trust and transparency
           </p>
         </div>
-        <div class="privacy-card" data-aos="fade-up" data-aos-delay="100">
-          <div class="privacy-icon">📜</div>
-          <h3>Terms of Use</h3>
-          <p>
-            Auraly is a free music discovery platform. By using our service, you
-            agree to respect copyright laws and use the platform responsibly.
-          </p>
+        <div class="privacy-content">
+          <div class="privacy-section" data-aos="fade-up" data-aos-delay="200">
+            <div class="privacy-icon">🔒</div>
+            <div class="privacy-details">
+              <h3>Data Protection</h3>
+              <p>
+                Your personal information is securely protected and never shared
+                without your explicit consent.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="privacy-card" data-aos="fade-up" data-aos-delay="200">
-          <div class="privacy-icon">🎵</div>
-          <h3>For Music Lovers</h3>
-          <p>
-            This project is for all the music and interface lovers. We celebrate
-            the art of music discovery and elegant design, creating an
-            experience that resonates with true music enthusiasts.
-          </p>
-        </div>
-      </div>
-      <div class="privacy-links" data-aos="fade-up" data-aos-delay="300">
-        <button class="privacy-link" id="privacyToggle">
-          Full Privacy Policy
-        </button>
-        <button class="terms-link" id="termsToggle">
-          Complete Terms of Service
-        </button>
-      </div>
-      <div id="privacyDetails" class="details-section">
-        <div class="details-content">
-          <h3>Auraly Privacy Policy</h3>
-          <p>
-            At Auraly, we are committed to protecting your privacy. Here are key
-            points of our privacy policy:
-          </p>
-          <ul>
-            <li>We do not collect or store any personal user data</li>
-            <li>
-              Your music preferences and search history remain completely
-              private
-            </li>
-            <li>No tracking or third-party data sharing</li>
-            <li>We use only essential cookies for website functionality</li>
-          </ul>
-          <p>
-            For the complete and most up-to-date privacy policy, please contact
-            us directly.
-          </p>
-        </div>
-      </div>
-      <div id="termsDetails" class="details-section">
-        <div class="details-content">
-          <h3>Auraly Terms of Service</h3>
-          <p>By using Auraly, you agree to the following terms:</p>
-          <ul>
-            <li>Use the platform responsibly and ethically</li>
-            <li>Respect copyright and intellectual property rights</li>
-            <li>Do not use the service for illegal activities</li>
-            <li>Auraly reserves the right to modify or discontinue service</li>
-          </ul>
-          <p>
-            These terms are subject to change. Please check regularly for
-            updates.
-          </p>
+        <div class="privacy-links" data-aos="fade-up" data-aos-delay="300">
+          <a href="#" class="cta-button app-cta app-coming-soon">
+            App Coming Soon
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+              <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </a>
         </div>
       </div>
     </section>
