--- a/auraly.html
+++ b/auraly.html
@@ -32,24 +32,31 @@
           <span class="logo-text">Auraly</span>
         </a>
       </div>
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
     </nav>
 
     <header class="hero">
       <div class="hero-content">
         <h1 data-aos="fade-up">Experience Music with Elegance</h1>
         <p class="hero-main" data-aos="fade-up" data-aos-delay="100">
-          Discover a beautifully crafted interface where music meets design. 
-          Search and explore your favorite tracks with unprecedented ease and style.
+          Discover a beautifully crafted interface where music meets design.
+          Search and explore your favorite tracks with unprecedented ease and
+          style.
+        </p>
+        <p class="app-note" data-aos="fade-up" data-aos-delay="150">
+          While our app is in development, you can experience Auraly through our
+          web version. Try it now to explore all the features and functionality
+          just like you would in the app!
         </p>
         <div class="cta-buttons" data-aos="fade-up" data-aos-delay="200">
           <a href="#" class="cta-button app-cta app-coming-soon">
             App Coming Soon
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
               <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
           </a>
@@ -74,7 +81,7 @@
       </div>
       <div class="hero-image" data-aos="zoom-in" data-aos-delay="200">
         <img
-          src="/app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
+          src="app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
           alt="Auraly App Interface"
           loading="lazy"
         />
@@ -112,34 +119,43 @@
             Intuitive interface that makes finding and playing music effortless
           </p>
         </div>
-        <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
-          <div class="feature-icon">🔒</div>
-          <h3>No Information Collection</h3>
-          <p>
-            Your privacy matters - we don't collect any personal data or
-            tracking information
-          </p>
-        </div>
       </div>
     </section>
 
     <section id="about" class="about">
       <div class="about-content">
-        <h2 data-aos="fade-up">About Auraly</h2>
-        <p data-aos="fade-up" data-aos-delay="100">
-          We're passionate about creating the perfect music discovery
-          experience. Our AI-powered platform is designed to understand your
-          unique taste and connect you with the music you'll love. Join us in
-          revolutionizing how people discover and enjoy music.
-        </p>
-        <div class="cta-section" style="text-align: center" data-aos="fade-up">
+        <h2 data-aos="fade-up">Discover the Art of Music Search</h2>
+        <div class="about-description" data-aos="fade-up" data-aos-delay="100">
+          <p class="aesthetic-text">
+            Step into a world where music discovery becomes an aesthetic
+            journey. Auraly's interface is thoughtfully crafted to blend beauty
+            with functionality, creating an immersive experience that delights
+            your senses.
+          </p>
+          <p class="feature-highlight" data-aos="fade-up" data-aos-delay="150">
+            ✨ Elegant Search Results: Watch as your music queries transform
+            into beautifully presented cards, each one a window to your next
+            favorite song.
+          </p>
+          <p class="feature-highlight" data-aos="fade-up" data-aos-delay="200">
+            🎨 Visual Harmony: Experience a color palette that soothes your eyes
+            while you explore, with smooth animations that make every
+            interaction feel magical.
+          </p>
+          <p class="feature-highlight" data-aos="fade-up" data-aos-delay="250">
+            🌟 Intuitive Design: Navigate through your musical journey with an
+            interface that anticipates your needs, making discovery feel
+            effortless and natural.
+          </p>
+        </div>
+        <div class="cta-section" data-aos="fade-up" data-aos-delay="300">
           <a
             href="https://123nt.github.io/auraly-app/search.html"
             class="cta-button web-btn"
             target="_blank"
             rel="noopener"
           >
-            Try Web Version
+            Experience the Beauty
             <svg
               width="20"
               height="20"
@@ -158,26 +174,60 @@
       <div class="container">
         <div class="app-showcase-content">
           <div class="app-showcase-text" data-aos="fade-right">
-            <h2>Elevate Your Music Experience</h2>
-            <p>
-              Auraly transforms music discovery into an art form. Our
-              meticulously designed interface combines cutting-edge technology
-              with elegant design, creating an intuitive journey through sound.
+            <h2>Experience Music, Reimagined</h2>
+            <p class="showcase-description">
+              Tired of cluttered music interfaces? We've crafted a clean, 
+              satisfying experience that lets you focus on what matters most - your music.
             </p>
             <div class="app-features">
-              <div class="app-feature">
-                <div class="feature-icon">🔍</div>
+              <div class="app-feature" data-aos="fade-up" data-aos-delay="100">
+                <div class="feature-icon">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" strokeWidth="2" strokeLinecap="round"/>
+                  </svg>
+                </div>
                 <div class="feature-description">
-                  <h4>Intelligent Search</h4>
-                  <p>Find your perfect track with unprecedented precision</p>
+                  <h4>Clean Search Results</h4>
+                  <p>Say goodbye to messy search results. Our clean layout presents your music beautifully, making discovery a joy.</p>
                 </div>
               </div>
-              <div class="app-feature">
-                <div class="feature-icon">🎵</div>
-                <div class="feature-description">
-                  <h4>Personalized Playlists</h4>
-                  <p>Curated collections that understand your musical soul</p>
+              
+              <div class="app-feature" data-aos="fade-up" data-aos-delay="200">
+                <div class="feature-icon">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M9 19V6l12-3v13M9 19c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-3c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z" strokeWidth="2" strokeLinecap="round"/>
+                  </svg>
                 </div>
+                <div class="feature-description">
+                  <h4>Satisfying Interactions</h4>
+                  <p>Every click, scroll, and transition feels just right. Experience music browsing that's smooth and delightful.</p>
+                </div>
+              </div>
+              
+              <div class="app-feature" data-aos="fade-up" data-aos-delay="300">
+                <div class="feature-icon">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M12 21a9 9 0 100-18 9 9 0 000 18z M12 8v4l3 3" strokeWidth="2" strokeLinecap="round"/>
+                  </svg>
+                </div>
+                <div class="feature-description">
+                  <h4>Elegant Music Lists</h4>
+                  <p>Browse your music in style with our thoughtfully designed lists and playlists that make organization a breeze.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="app-showcase-visual" data-aos="fade-left" data-aos-delay="200">
+            <div class="showcase-card">
+              <div class="card-content">
+                <h3>Try the Difference</h3>
+                <p>Experience a music interface that feels just right</p>
+                <a href="https://123nt.github.io/auraly-app/search.html" class="showcase-cta" target="_blank" rel="noopener">
+                  Experience Now
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M5 12h14M12 5l7 7-7 7" strokeWidth="2" strokeLinecap="round"/>
+                  </svg>
+                </a>
               </div>
             </div>
           </div>
@@ -214,21 +264,82 @@
           <div class="privacy-section" data-aos="fade-up" data-aos-delay="200">
             <div class="privacy-icon">🔒</div>
             <div class="privacy-details">
-              <h3>Data Protection</h3>
+              <h3>Your Privacy Matters</h3>
               <p>
-                Your personal information is securely protected and never shared
-                without your explicit consent.
+                We are committed to protecting your privacy and ensuring a
+                secure experience.
               </p>
+              <button
+                class="expand-button"
+                onclick="toggleDetails('privacy-details')"
+              >
+                Learn More
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                >
+                  <path d="M19 9l-7 7-7-7" />
+                </svg>
+              </button>
             </div>
           </div>
-        </div>
-        <div class="privacy-links" data-aos="fade-up" data-aos-delay="300">
-          <a href="#" class="cta-button app-cta app-coming-soon">
-            App Coming Soon
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-              <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-          </a>
+          <div id="privacy-details" class="details-section">
+            <div class="details-content">
+              <h3>Privacy Policy</h3>
+              <ul>
+                <li>We collect minimal data necessary for app functionality</li>
+                <li>
+                  Your personal information is encrypted and securely stored
+                </li>
+                <li>
+                  We never share your data with third parties without consent
+                </li>
+                <li>You can request data deletion at any time</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="privacy-section" data-aos="fade-up" data-aos-delay="300">
+            <div class="privacy-icon">📜</div>
+            <div class="privacy-details">
+              <h3>Terms of Service</h3>
+              <p>
+                Clear and fair terms to ensure the best experience for all
+                users.
+              </p>
+              <button
+                class="expand-button"
+                onclick="toggleDetails('terms-details')"
+              >
+                Learn More
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                >
+                  <path d="M19 9l-7 7-7-7" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div id="terms-details" class="details-section">
+            <div class="details-content">
+              <h3>Terms of Service</h3>
+              <ul>
+                <li>Use the service responsibly and legally</li>
+                <li>Respect intellectual property rights</li>
+                <li>Don't attempt to misuse or hack the service</li>
+                <li>
+                  We reserve the right to terminate accounts that violate terms
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -336,6 +447,12 @@ The web app will then appear on your home screen for quick access!`);
       termsToggle.addEventListener("click", () => {
         termsDetails.classList.toggle("active");
       });
+    </script>
+    <script>
+      function toggleDetails(id) {
+        const details = document.getElementById(id);
+        details.classList.toggle("active");
+      }
     </script>
   </body>
 </html>
