--- a/auraly.html
+++ b/auraly.html
@@ -61,7 +61,7 @@
             </svg>
           </a>
           <a
-            href="https://123nt.github.io/auraly-app/search.html"
+            href="https://123nt.github.io/auraly-app/auraly-app.html"
             class="cta-button web-btn"
             target="_blank"
             rel="noopener"
@@ -150,7 +150,7 @@
         </div>
         <div class="cta-section" data-aos="fade-up" data-aos-delay="300">
           <a
-            href="https://123nt.github.io/auraly-app/search.html"
+            href="https://123nt.github.io/auraly-app/auraly-app.html"
             class="cta-button web-btn"
             target="_blank"
             rel="noopener"
@@ -176,56 +176,115 @@
           <div class="app-showcase-text" data-aos="fade-right">
             <h2>Experience Music, Reimagined</h2>
             <p class="showcase-description">
-              Tired of cluttered music interfaces? We've crafted a clean, 
-              satisfying experience that lets you focus on what matters most - your music.
+              Tired of cluttered music interfaces? We've crafted a clean,
+              satisfying experience that lets you focus on what matters most -
+              your music.
             </p>
             <div class="app-features">
               <div class="app-feature" data-aos="fade-up" data-aos-delay="100">
                 <div class="feature-icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" strokeWidth="2" strokeLinecap="round"/>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                  >
+                    <path
+                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                      strokeWidth="2"
+                      strokeLinecap="round"
+                    />
                   </svg>
                 </div>
                 <div class="feature-description">
                   <h4>Clean Search Results</h4>
-                  <p>Say goodbye to messy search results. Our clean layout presents your music beautifully, making discovery a joy.</p>
+                  <p>
+                    Say goodbye to messy search results. Our clean layout
+                    presents your music beautifully, making discovery a joy.
+                  </p>
                 </div>
               </div>
-              
+
               <div class="app-feature" data-aos="fade-up" data-aos-delay="200">
                 <div class="feature-icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M9 19V6l12-3v13M9 19c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-3c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z" strokeWidth="2" strokeLinecap="round"/>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                  >
+                    <path
+                      d="M9 19V6l12-3v13M9 19c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-3c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
+                      strokeWidth="2"
+                      strokeLinecap="round"
+                    />
                   </svg>
                 </div>
                 <div class="feature-description">
                   <h4>Satisfying Interactions</h4>
-                  <p>Every click, scroll, and transition feels just right. Experience music browsing that's smooth and delightful.</p>
+                  <p>
+                    Every click, scroll, and transition feels just right.
+                    Experience music browsing that's smooth and delightful.
+                  </p>
                 </div>
               </div>
-              
+
               <div class="app-feature" data-aos="fade-up" data-aos-delay="300">
                 <div class="feature-icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M12 21a9 9 0 100-18 9 9 0 000 18z M12 8v4l3 3" strokeWidth="2" strokeLinecap="round"/>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                  >
+                    <path
+                      d="M12 21a9 9 0 100-18 9 9 0 000 18z M12 8v4l3 3"
+                      strokeWidth="2"
+                      strokeLinecap="round"
+                    />
                   </svg>
                 </div>
                 <div class="feature-description">
                   <h4>Elegant Music Lists</h4>
-                  <p>Browse your music in style with our thoughtfully designed lists and playlists that make organization a breeze.</p>
+                  <p>
+                    Browse your music in style with our thoughtfully designed
+                    lists and playlists that make organization a breeze.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="app-showcase-visual" data-aos="fade-left" data-aos-delay="200">
+          <div
+            class="app-showcase-visual"
+            data-aos="fade-left"
+            data-aos-delay="200"
+          >
             <div class="showcase-card">
               <div class="card-content">
                 <h3>Try the Difference</h3>
                 <p>Experience a music interface that feels just right</p>
-                <a href="https://123nt.github.io/auraly-app/search.html" class="showcase-cta" target="_blank" rel="noopener">
+                <a
+                  href="https://123nt.github.io/auraly-app/auraly-app.html"
+                  class="showcase-cta"
+                  target="_blank"
+                  rel="noopener"
+                >
                   Experience Now
-                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M5 12h14M12 5l7 7-7 7" strokeWidth="2" strokeLinecap="round"/>
+                  <svg
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                  >
+                    <path
+                      d="M5 12h14M12 5l7 7-7 7"
+                      strokeWidth="2"
+                      strokeLinecap="round"
+                    />
                   </svg>
                 </a>
               </div>
@@ -370,7 +429,7 @@
                 <i class="fab fa-twitter"></i>
               </a>
               <a
-                href="https://github.com/auraly"
+                href="https://github.com/auraly-app"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="GitHub"
