--- a/auraly.html
+++ b/auraly.html
@@ -101,6 +101,128 @@
         />
       </div>
     </header>
+    <!-- Image Scroll Section -->
+    <section class="image-scroll-section">
+      <div class="scroll-container">
+        <div class="scroll-content">
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_002.jpeg"
+            alt="Auraly App Screenshot 2"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_003.jpeg"
+            alt="Auraly App Screenshot 3"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_004.jpeg"
+            alt="Auraly App Screenshot 4"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_005.jpeg"
+            alt="Auraly App Screenshot 5"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_006.jpeg"
+            alt="Auraly App Screenshot 6"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_007.jpeg"
+            alt="Auraly App Screenshot 7"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_008.jpeg"
+            alt="Auraly App Screenshot 8"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_009.jpeg"
+            alt="Auraly App Screenshot 9"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_010.jpeg"
+            alt="Auraly App Screenshot 10"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_011.jpeg"
+            alt="Auraly App Screenshot 11"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_012.jpeg"
+            alt="Auraly App Screenshot 12"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_013.jpeg"
+            alt="Auraly App Screenshot 13"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_014.jpeg"
+            alt="Auraly App Screenshot 14"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_015.jpeg"
+            alt="Auraly App Screenshot 15"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_016.jpeg"
+            alt="Auraly App Screenshot 16"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_017.jpeg"
+            alt="Auraly App Screenshot 17"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_018.jpeg"
+            alt="Auraly App Screenshot 18"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_019.jpeg"
+            alt="Auraly App Screenshot 19"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
+            alt="Auraly App Screenshot 1"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_002.jpeg"
+            alt="Auraly App Screenshot 2"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_003.jpeg"
+            alt="Auraly App Screenshot 3"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_004.jpeg"
+            alt="Auraly App Screenshot 4"
+            loading="lazy"
+          />
+          <img
+            src="app scrennshots/signal-2024-12-04-225459_005.jpeg"
+            alt="Auraly App Screenshot 5"
+            loading="lazy"
+          />
+        </div>
+      </div>
+    </section>
 
     <section id="features" class="features">
       <div class="section-header">
